--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,8 +124,8 @@
                 <br>
                 <div>
                     <div class="progress-labels">
-                        <div class="float-start">KAPITAŁ : {{loan.pierwszaRata?.kapitalPercent?.toFixed(2)}} %</div>
-                        <div class="float-end">ODSETKI : {{loan.pierwszaRata?.odsetkiPercent?.toFixed(2)}} %</div>
+                        <div class="float-start">KAPITAŁ : {{loan.pierwszaRata?.kapitalPercentReal?.toFixed(2)}} %</div>
+                        <div class="float-end">ODSETKI : {{loan.pierwszaRata?.odsetkiPercentReal?.toFixed(2)}} %</div>
                         <div class="clearfix"></div>
                     </div>
                 </div>
