--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -175,3 +175,36 @@ mat-radio-button
   {
       color: white;
   }
+
+  :host ::ng-deep .mat-accent .mat-slider-track-fill, 
+  :host ::ng-deep .mat-accent .mat-slider-thumb, 
+  :host ::ng-deep .mat-accent .mat-slider-thumb-label
+  {
+    background: rgb(20, 172, 0);
+  }
+
+  :host ::ng-deep .mat-accent .mat-slider-thumb-label-text
+  {
+      color: white;
+      text-shadow: 0px 1px 2px rgba(66, 68, 90, 1);
+      font-size: 10px;
+  }
+
+  .bg-success
+  {
+    background-color: rgb(20, 172, 0) !important;
+  }
+
+  .btn-outline-success
+  {
+    color: rgb(20, 172, 0);
+    border-color: rgb(20, 172, 0);
+  }
+
+  :host ::ng-deep .calc .mat-slider-thumb-label
+  {
+    width: 35px;
+    height: 35px;
+    top: -45px;
+    right: -18px;
+  }
