fixed button style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
                         <label style="width: 150px;" class="btn btn-outline-warning" for="btnradio1">Raty stałe</label>
 
                         <input disabled type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                        <label style="width: 150px;" class="btn btn-outline-success" for="btnradio2">Raty malejące</label>
+                        <label style="width: 150px;" class="btn btn-outline-secondary" for="btnradio2">Raty malejące</label>
                     </div>
                 </div>
                 <br>
