--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,11 +66,11 @@
                 <div class="parameter-label">Typ raty</div>
                 <div class="center-numeric">
                     <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" value="stałe" [(ngModel)]="type" >
                         <label style="width: 150px;" class="btn btn-outline-warning" for="btnradio1">Raty stałe</label>
 
-                        <input disabled type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                        <label style="width: 150px;" class="btn btn-outline-secondary" for="btnradio2">Raty malejące</label>
+                        <input type="radio" class="btn-check" name="btnradio" id="btnradio2" value="malejące" [(ngModel)]="type" autocomplete="off">
+                        <label style="width: 150px;" class="btn btn-outline-warning" for="btnradio2">Raty malejące</label>
                     </div>
                 </div>
                 <br>
@@ -113,9 +113,9 @@
                     <div>
                         <div class="float-start summary-box">
 
-                            <h1>Rata miesięczna</h1>
+                            <h1>Piersza Rata</h1>
                             <div style="font-size: 37px; margin-bottom: 5px;" class="summary-value">
-                                {{loan.monthlyPayment | currency : "PLN"}}
+                                {{loan.pierwszaRata?.rataKredytu | currency : "PLN"}}
                             </div>
 
                         </div>
@@ -181,7 +181,14 @@
                 <br>
                 <div class="summary summary-calculation">
                     <div>
-                       
+                        <div class="float-start summary-box">
+
+                            <h1>Rata</h1>
+                            <div style="font-size: 37px; margin-bottom: 5px;" class="summary-value">
+                                {{symulacjaAktualnyMiesiacObjekt.rataKredytu | currency : "PLN"}}
+                            </div>
+
+                        </div>
                         <div class="float-start summary-box">
 
                             <h1>Miesiąc spłaty</h1>
@@ -198,18 +205,12 @@
                             </div>
 
                         </div>
+                        
                         <div class="clearfix"></div>
                     </div>
                     <br>
-                     <div class="summary-box">
-
-                            <h2>Rata miesięczna</h2>
-                            <div class="summary-value">
-                                {{loan.monthlyPayment | currency : "PLN"}}
-                            </div>
-
-                        </div>
-                        <br>
+                    
+                   
                     <div>
                         <div class="progress-labels">
                             <div class="float-start">RATA KAPITAŁ : {{symulacjaAktualnyMiesiacObjekt.kapitalPercentReal?.toFixed(2)}} %</div>
@@ -363,7 +364,7 @@
                     <!-- Name Column -->
                     <ng-container matColumnDef="kwota">
                         <th mat-header-cell *matHeaderCellDef> Kapitał do spłaty</th>
-                        <td mat-cell *matCellDef="let element"> {{element.kwotaKredytu | currency : "PLN"}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.kwotaKredytuPozostala | currency : "PLN"}} </td>
                     </ng-container>
 
                     <!-- Weight Column -->
