--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -157,8 +157,20 @@ mat-radio-button
 
   .btn-warning:hover,.btn-warning:focus, .btn-check:checked+.btn-outline-warning:hover,.btn-check:checked+.btn-outline-warning:focus
   {
-    box-shadow: 0 0 0 0.25rem rgb(142 0 159 / 28%);
+    box-shadow: 0 0 0 0px rgb(142 0 159 / 0%);
   }
+
+  .btn-check:focus+.btn-outline-warning, .btn-outline-warning:focus
+  {
+    box-shadow: 0 0 0 0px rgb(142 0 159 / 0%);
+  }
+
+  .form-control:focus
+  {
+    box-shadow: none;
+    border-color: purple;
+  }
+  
 
   .progress{
       margin: 10px 0px;
