--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -374,20 +374,18 @@
                         <th mat-header-cell *matHeaderCellDef> Miesiąc </th>
                         <td mat-cell *matCellDef="let element"> {{element.numerMiesiaca}} </td>
                     </ng-container>
-
-                    <!-- Name Column -->
                     <ng-container matColumnDef="kwota">
                         <th mat-header-cell *matHeaderCellDef> Kapitał do spłaty</th>
                         <td mat-cell *matCellDef="let element"> {{element.kwotaKredytuPozostala | currency : "PLN"}} </td>
                     </ng-container>
-
-                    <!-- Weight Column -->
+                    <ng-container matColumnDef="rata">
+                        <th mat-header-cell *matHeaderCellDef> Rata kredytu</th>
+                        <td mat-cell *matCellDef="let element"> {{element.rataKredytu | currency : "PLN"}} </td>
+                    </ng-container>
                     <ng-container matColumnDef="odsetki">
                         <th mat-header-cell *matHeaderCellDef> Odsetki </th>
                         <td mat-cell *matCellDef="let element"> {{element.odsetki | currency : "PLN"}} </td>
                     </ng-container>
-
-                    <!-- Symbol Column -->
                     <ng-container matColumnDef="kapital">
                         <th mat-header-cell *matHeaderCellDef> Kapitał </th>
                         <td mat-cell *matCellDef="let element"> {{element.kapital | currency : "PLN"}} </td>
