--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,20 +25,21 @@
                 </div>
             </div>
             <div>
-                <div class="parameter-label">Okres spłaty w latach</div>
+                <div class="parameter-label">Okres spłaty w miesiącach</div>
                 <div>
-                    <mat-slider thumbLabel [min]="loanYearsMin" [max]="loanYearsMax" [step]="1" [(ngModel)]="loanYears"></mat-slider>
+                    <mat-slider thumbLabel [min]="loanMonthsMin" [max]="loanMonthsMax" [step]="1" [(ngModel)]="loanMonths"></mat-slider>
                 </div>
                 <div class="slider-numbers">
-                    <div class="float-start">{{loanYearsMin}}</div>
-                    <div class="float-end">{{loanYearsMax}}</div>
+                    <div class="float-start">{{loanMonthsMin}}</div>
+                    <div class="float-end">{{loanMonthsMax}}</div>
                 </div>
                 <div class="center-numeric">
                     <div class="input-group mb-3">
-                        <button class="btn btn-warning" type="button" (click)="changeYears(-1)">-</button>
-                        <input (keypress)="isValidInt($event)" type="text" class="form-control" (change)="changeYearsInput($event)" value="{{ loanYears| number :'1.0' }}">
-                        <span class="input-group-text">lat</span>
-                        <button class="btn btn-warning" type="button" (click)="changeYears(1)">+</button>
+                        <button class="btn btn-warning" type="button" (click)="changeMonths(-1)">-</button>
+                        <input (keypress)="isValidInt($event)" type="text" class="form-control" (change)="changeMonthsInput($event)" value="{{ loanMonths| number :'1.0' }}">
+                        <span class="input-group-text">miesięcy</span>
+                        <button class="btn btn-warning" type="button" (click)="changeMonths(1)">+</button>
+                        <span class="input-group-text" style="width: 130px;">lat : {{loanYears}} miesięcy: {{loanYearsRestMonths}} </span>
                     </div>
                 </div>
             </div>
@@ -105,9 +106,9 @@
                 <div class="row">
                     <div>
                         <div class="float-start summary-box">
-                            <h2>Okres spłaty w latach</h2>
+                            <h2>Okres spłaty w miesiącach</h2>
                             <div class="summary-value">
-                                {{loanYears }}
+                                {{loanMonths }}
                             </div>
                         </div>
                         <div class="float-start summary-box">
@@ -319,7 +320,7 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="10odsetki">
-                        <th mat-header-cell *matHeaderCellDef> Odsetki <span *ngIf="loanYears >= 10">10</span><span *ngIf="loanYears < 10">{{ loanYears }}</span> lat</th>
+                        <th mat-header-cell *matHeaderCellDef> Odsetki<br><span *ngIf="loanMonths >= 120">10 lat</span><span *ngIf="loanMonths < 120">{{ loanMonths }} miesięcy</span> </th>
                         <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
                             <span> {{element.odsetkiSuma10Lat | currency : "PLN"}}</span>
                             <div *ngIf="!element.current" [ngClass]="{'diff-green': element.odsetki10Diff < 0}">
@@ -328,10 +329,10 @@
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="10kapital">
-                        <th mat-header-cell *matHeaderCellDef> Kapitał <span *ngIf="loanYears >= 10">10</span><span *ngIf="loanYears < 10">{{ loanYears }}</span> lat</th>
+                        <th mat-header-cell *matHeaderCellDef> Kapitał<br><span *ngIf="loanMonths >= 120">10 lat</span><span *ngIf="loanMonths < 120">{{ loanMonths }} miesięcy</span></th>
                         <td [ngClass]="{'current-row': element.current}" mat-cell *matCellDef="let element">
                             <span> {{element.kapitalSuma10Lat | currency : "PLN"}}</span>
-                            <div *ngIf="!element.current && loanYears > 10" [ngClass]="{'diff-green': element.kapital10Diff > 0}">
+                            <div *ngIf="!element.current && loanMonths > 120" [ngClass]="{'diff-green': element.kapital10Diff > 0}">
                                 <span class="diff-amount"><span *ngIf="element.kapital10Diff > 0">+</span>{{element.kapital10Diff | currency : "PLN"}}</span> <span class="diff-percent">{{element.kapital10DiffPercent | percent}}</span>
                             </div>
                         </td>
