--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,34 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+table td{
+    min-width: 100px;
+}
+
+.diff-amount{
+    color: #d90000;
+    font-size: 10px;
+    font-weight: 400;
+}
+
+.diff-percent{
+    font-size: 10px;
+    color: #d90000;
+    background: #ffdcdc;
+    margin-left: 2px;
+    border-radius: 4px;
+    padding: 1px 4px;
+    margin-right: 2px;
+    font-weight: 400;
+
+}
+
+.diff-green .diff-amount{
+    color: rgb(20, 172, 0);
+}
+
+.diff-green .diff-percent{
+    color: rgb(20, 172, 0);
+    background: rgb(23 177 3 / 21%);
+}
