--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -268,7 +268,7 @@
         </div>
 
     </div>
-    <hr class="d-none d-md-block">
+    <!-- <hr class="d-none d-md-block"> -->
     <br>
     <mat-tab-group (selectedTabChange)="tabChanged($event)">
         <mat-tab label="Symulacja zmiany raty">
