--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
             <br>
             <div class="dict-text d-none d-lg-block" style="text-align: justify;">
                 <p>
-                    <strong>Oprocentowanie kredytów hipotecznych</strong> - jest pochodną stopy procentowej ustalanej przez przed Radę Polityki Pieniężnej oraz marży banków. Banki mają w&nbsp;ofercie kredyty hipoteczne ze zmiennym, stałym i&nbsp;okresowo stałym oprocentowaniem. Te pierwsze wiążą się z&nbsp;największym ryzykiem, ponieważ jeżeli poziom stawki referencyjnej obniża się lub rośnie, bank odpowiednio przelicza oprocentowanie kredytu. Najbezpieczniejsze są kredyty o stałym oprocentowaniu obowiązującym przez cały czas kredytowania.<br>
+                    <strong>Oprocentowanie kredytów hipotecznych</strong> - jest pochodną stopy procentowej ustalanej przez Radę Polityki Pieniężnej oraz marży banków. Banki mają w&nbsp;ofercie kredyty hipoteczne ze zmiennym, stałym i&nbsp;okresowo stałym oprocentowaniem. Te pierwsze wiążą się z&nbsp;największym ryzykiem, ponieważ jeżeli poziom stawki referencyjnej obniża się lub rośnie, bank odpowiednio przelicza oprocentowanie kredytu. Najbezpieczniejsze są kredyty o stałym oprocentowaniu obowiązującym przez cały czas kredytowania.<br>
                     <br>
                     <strong>Rata kapitałowa</strong> - kapitał pozostały do spłaty. <br>
                     <strong>Rata odsetkowa</strong> - są to odsetki od kapitału pozostałego do spłaty.
@@ -268,7 +268,6 @@
         </div>
 
     </div>
-    <!-- <hr class="d-none d-md-block"> -->
     <br>
     <mat-tab-group (selectedTabChange)="tabChanged($event)">
         <mat-tab label="Symulacja zmiany raty">
