--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,11 @@ table td{
     min-width: 100px;
 }
 
+table tr.mat-row
+{
+    height: 64px;
+}
+
 .diff-amount{
     color: #d90000;
     font-size: 10px;
