--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -113,6 +113,13 @@ mat-radio-button
   mat-slider
   {
       width: 100%;
+      height: 24px;
+      margin-bottom: 15px;
+  }
+
+  :host ::ng-deep mat-slider .mat-slider-wrapper
+  {
+      top:12px;
   }
 
   .btn-warning, .btn-check:checked+.btn-outline-warning
