--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<router-outlet></router-outlet>
-
 <br>
 <div class="container-xxl calc">
     <h1>Kalkulator kredytowy</h1>
@@ -44,7 +42,7 @@
             </div>
 
             <div>
-                <div class="parameter-label">Oprocentowanie (WIBOR + marża)</div>
+                <div class="parameter-label">WIBOR</div>
                 <div>
                     <mat-slider thumbLabel [displayWith]="formatIntersetRate" [min]="interestRateMin" [max]="interestRateMax" [step]="0.05" [(ngModel)]="interestRate"></mat-slider>
                 </div>
@@ -58,6 +56,25 @@
                         <input (keypress)="isValidPercent($event)" (change)="changePercentInput($event)" type="text" class="form-control" value="{{ interestRate | number :'1.2-2' }}">
                         <span class="input-group-text">%</span>
                         <button class="btn btn-warning" type="button" (click)="changePercent(0.05)">+</button>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="parameter-label">Marża banku</div>
+                <div>
+                    <mat-slider thumbLabel [displayWith]="formatMarginRate" [min]="marginMin" [max]="marginMax" [step]="0.05" [(ngModel)]="margin"></mat-slider>
+                </div>
+                <div class="slider-numbers">
+                    <div class="float-start">{{marginMin}}%</div>
+                    <div class="float-end">{{marginMax}}%</div>
+                </div>
+                <div class="center-numeric">
+                    <div class="input-group mb-3">
+                        <button class="btn btn-warning" type="button" (click)="changeMargin(-0.05)">-</button>
+                        <input (keypress)="isValidPercent($event)" (change)="changeMarginInput($event)" type="text" class="form-control" value="{{ margin | number :'1.2-2' }}">
+                        <span class="input-group-text">%</span>
+                        <button class="btn btn-warning" type="button" (click)="changeMargin(0.05)">+</button>
                     </div>
                 </div>
             </div>
@@ -113,7 +130,10 @@
                         <div class="float-start summary-box">
                             <h2>Oprocentowanie</h2>
                             <div class="summary-value">
-                                {{interestRate | number :'1.2-2'}} %
+                                {{interest | number :'1.2-2'}} % 
+                                <span style="font-size: 18px; font-weight: 300; opacity: 0.7;">
+                                    (WIBOR {{interestRate | number :'1.2-2'}}% + marża {{margin | number :'1.2-2'}}%)
+                                </span>
                             </div>
                         </div>
                     </div>
