--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -288,6 +288,9 @@
         </div>
 
     </div>
+    <hr>
+    <app-rent-simulation [loan]="loan"></app-rent-simulation>
+    <br>
     <br>
     <mat-tab-group (selectedTabChange)="tabChanged($event)">
         <mat-tab label="Symulacja zmiany raty">
