--- a/src/app/components/rent-simulation/rent-simulation/rent-simulation.component.html
+++ b/src/app/components/rent-simulation/rent-simulation/rent-simulation.component.html
@@ -57,6 +57,10 @@
             <p>
                 * Koszty związane z uruchomieniem kredytu oraz zakupem nieruchomości nie są uwzględnione. Zakładamy, że najemca prawdopodobnie zakupi kiedyś nieruchomość, więc te koszty poniesie.
             </p>
+            <p>
+                * Należy mieć na uwadze, że kredyt hipoteczny będzie miał LTV <= 90%, a dodatkowo nieruchomość kupowana często będzie wymagała jeszcze wykończenia lub remontu. Symulator nie uwzględnia tego dodatkowego kapitału.
+                Porównujemy taki kedyt do wynajęcia 100% mieszkania (wpełni wykończonego i umeblowanego).
+            </p>
         </div>
 
 
