--- a/src/app/components/rent-simulation/rent-simulation/rent-simulation.component.html
+++ b/src/app/components/rent-simulation/rent-simulation/rent-simulation.component.html
@@ -46,7 +46,7 @@
 
 
 
-        <div class="dict-text d-none d-lg-block" style="text-align: justify;">
+        <div class="dict-text" style="text-align: justify;">
             <p>Założenia:</p>
             <p>
                 * Symulator nie uwzględnia zmian cen nieruchomości oraz kosztów najmu.
