--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
                     <mat-slider thumbLabel [displayWith]="formatAmount" aria-label="units" [min]="loanAmountMin" [max]="loanAmountMax" [step]="10000" [(ngModel)]="loanAmount"></mat-slider>
                 </div>
                 <div class="slider-numbers">
-                    <div class="float-start">10K</div>
-                    <div class="float-end">1M</div>
+                    <div class="float-start">10k</div>
+                    <div class="float-end">2M</div>
                 </div>
                 <div class="center-numeric">
                     <div class="input-group mb-3">
